--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
       <div class="logo-container">
         <div class="logo-link">
           <a href="#about-me">
-            <img src="/Assets/dl_dev_icon.png" alt="dl.dev-logo"></a>
+            <img src="Assets/dl_dev_icon.png" alt="dl.dev-logo"></a>
         </div>
       </div>
       <div class="navbar-container">
         <div class="nav-container">
           <div class="nav-link">
             <a href="/portfolio.html">
-              <img src="/Assets/We create.png" alt="portfolio-logo"
+              <img src="Assets/we-create.png" alt="portfolio-logo"
             /></a>
           </div>
         </div>
         <div class="contact-container">
           <div class="contact-link">
             <a href="/contact.html">
-              <img src="https://github.com/dlwhite112/Portfolio/blob/19d820d1c8020cfe1e04a4f6ebda882af3bdcc69/Assets/Contact%20ME.png" alt="contact-logo"
+              <img src="Assets/contact-me.png" alt="contact-logo"
             /></a>
           </div>
         </div>
@@ -37,7 +37,7 @@
     <div class="wrapper">
       <section class="landing-section">
         <div class="landing-banner">
-          <img src="https://github.com/dlwhite112/Portfolio/blob/19d820d1c8020cfe1e04a4f6ebda882af3bdcc69/Assets/Landing%20Banner.png" alt="Landing-Banner" />
+          <img src="Assets/landing_banner.png" alt="Landing-Banner" />
           <div
             class="scroll"
             data-rateX="2"
@@ -47,7 +47,7 @@
             <a href="/contact.html">
               <img
                 class="rocket"
-                src="https://github.com/dlwhite112/Portfolio/blob/19d820d1c8020cfe1e04a4f6ebda882af3bdcc69/Assets/rocket-gif.gif"
+                src="Assets/rocket-gif.gif"
                 alt="rocket-gif"
               />
             </a>
@@ -58,7 +58,7 @@
         <div class="working-stack-icons"></div>
         <div class="about-me-text">
           <img
-            src="https://github.com/dlwhite112/Portfolio/blob/19d820d1c8020cfe1e04a4f6ebda882af3bdcc69/Assets/Headings/about-me-heading.png"
+            src="Assets/Headings/about-me-heading.png"
             alt="about-me-heading"
             class="img-heading"
           />
@@ -72,10 +72,10 @@
           </p>
           <div class="about-me-links">
             <a href="/portfolio.html">
-              <img class="about-me-btn" src="https://github.com/dlwhite112/Portfolio/blob/19d820d1c8020cfe1e04a4f6ebda882af3bdcc69/Assets/buttons/portfolio-btn.png" alt="portfolio-btn"
+              <img class="about-me-btn" src="Assets/buttons/portfolio-btn.png" alt="portfolio-btn"
             /></a>
             <a href="/contact.html">
-              <img class="about-me-btn" src="https://github.com/dlwhite112/Portfolio/blob/19d820d1c8020cfe1e04a4f6ebda882af3bdcc69/Assets/buttons/contact-btn.png" alt="contact-btn"
+              <img class="about-me-btn" src="Assets/buttons/contact-btn.png" alt="contact-btn"
             /></a>
           </div>
         </div>
