fixing incorrect links

--- a/contact.html
+++ b/contact.html
@@ -13,15 +13,15 @@
     <nav>
       <div class="logo-container">
         <div class="logo-link">
-          <a href="/index.html">
-            <img src="/Assets/dl.dev icon.png" alt="dl.dev-logo"
+          <a href="index.html">
+            <img src="Assets/dl_dev_icon.png" alt="dl.dev-logo"
           /></a>
         </div>
       </div>
       <div class="nav-container">
         <div class="nav-link">
-          <a href="/portfolio.html">
-            <img src="/Assets/We create.png" alt="dl.dev-logo"
+          <a href="portfolio.html">
+            <img src="Assets/we-create.png" alt="dl.dev-logo"
           /></a>
         </div>
       </div>
@@ -31,10 +31,10 @@
       <section class="contact-section">
         <div class="contact-text">
       
-          <img src="./Assets/rocket-gif.gif" class="land-rocket"
+          <img src="Assets/rocket-gif.gif" class="land-rocket"
           alt="rocket-gif">
           <img
-            src="/Assets/Headings/contact-me-heading.png"
+            src="Assets/Headings/contact-me-heading.png"
             alt="contact-me-heading"
             class="contact-img-heading"
           />
@@ -48,11 +48,11 @@
           <div class="contact-card">
             <div class="bio-img">
               <div class="circle"></div>
-              <img src="./Assets/dl-round-img.PNG" alt="contact-img" />
+              <img src="Assets/dl-round-img.PNG" alt="contact-img" />
             </div>
             <div class="info">
               <div class="img-heading">
-                <img src="/Assets/Headings/card-heading.png" height="90px" alt="card-heading" />
+                <img src="Assets/Headings/card-heading.png" height="90px" alt="card-heading" />
               </div>
       
               <h3>
@@ -61,22 +61,22 @@
               </h3>
               <div class="icons">
                 <a href="https://github.com/dlwhite112/">
-                  <img src="/Assets/card-icons/Github.png" alt="github-icon"
+                  <img src="Assets/card-icons/Github.png" alt="github-icon"
                 /></a>
                 <a href="https://www.linkedin.com/in/d-l-white-2298011bb/">
-                  <img src="/Assets/card-icons/LinkedIN.png" alt="linkedin-icon"
+                  <img src="Assets/card-icons/LinkedIN.png" alt="linkedin-icon"
                 /></a>
                 <a href="https://www.facebook.com/deavonte.white">
-                  <img src="/Assets/card-icons/Facebook.png" alt="gmail-icon"
+                  <img src="Assets/card-icons/Facebook.png" alt="gmail-icon"
                 /></a>
                 <a href="https://twitter.com/dlwhite112">
-                  <img src="/Assets/card-icons/Twitter.png" alt="twitter-icon"
+                  <img src="Assets/card-icons/Twitter.png" alt="twitter-icon"
                 /></a>
               </div>
               <div class="resume">
                   <a
                   class="btn btn-outline-secondary"
-                  href="./Assets/dlwhite-resume.pdf"
+                  href="Assets/dlwhite-resume.pdf"
                   download
                 ><button>Resume pdf</button>
               </div>
@@ -86,6 +86,6 @@
       </section>
     </div>
 
-    <script src="/card styling/card.js"></script>
+    <script src="card styling/card.js"></script>
   </body>
 </html>
