--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
       <div class="navbar-container">
         <div class="nav-container">
           <div class="nav-link">
-            <a href="/portfolio.html">
+            <a href="portfolio.html">
               <img src="Assets/we-create.png" alt="portfolio-logo"
             /></a>
           </div>
         </div>
         <div class="contact-container">
           <div class="contact-link">
-            <a href="/contact.html">
+            <a href="contact.html">
               <img src="Assets/contact-me.png" alt="contact-logo"
             /></a>
           </div>
@@ -44,7 +44,7 @@
             data-rateY="0"
             data-direction="horizontal"
           >
-            <a href="/contact.html">
+            <a href="contact.html">
               <img
                 class="rocket"
                 src="Assets/rocket-gif.gif"
@@ -71,10 +71,10 @@
             Let’s create together.
           </p>
           <div class="about-me-links">
-            <a href="/portfolio.html">
+            <a href="portfolio.html">
               <img class="about-me-btn" src="Assets/buttons/portfolio-btn.png" alt="portfolio-btn"
             /></a>
-            <a href="/contact.html">
+            <a href="contact.html">
               <img class="about-me-btn" src="Assets/buttons/contact-btn.png" alt="contact-btn"
             /></a>
           </div>
