--- a/portfolio.html
+++ b/portfolio.html
@@ -12,23 +12,23 @@
     <nav>
       <div class="logo-container">
         <div class="logo-link">
-          <a href="/index.html">
-            <img src="/Assets/dl.dev icon.png" alt="dl.dev-logo"
+          <a href="index.html">
+            <img src="Assets/dl_dev_icon.png" alt="dl.dev-logo"
           /></a>
         </div>
       </div>
       <div class="navbar-container">
         <div class="nav-container">
           <div class="nav-link">
-            <a href="/portfolio.html">
-              <img src="/Assets/We create.png" alt="portfolio-logo"
+            <a href="portfolio.html">
+              <img src="Assets/we-create.png" alt="portfolio-logo"
             /></a>
           </div>
         </div>
         <div class="contact-container">
           <div class="contact-link">
-            <a href="/contact.html">
-              <img src="/Assets/Contact ME.png" alt="contact-logo"
+            <a href="contact.html">
+              <img src="Assets/contact-me.png" alt="contact-logo"
             /></a>
           </div>
         </div>
@@ -38,11 +38,11 @@
     <div class="wrapper">
       <section class="my-work-section">
         <div class="heading-container">
-          <img src="/Assets/Headings/my-work-heading.png" alt="my-work-heading" />
+          <img src="Assets/Headings/my-work-heading.png" alt="my-work-heading" />
         </div>
         <div class="project-container">
           <div class="card">
-            <img src="/Assets/project-screenshots/din-din-screenshot.png" alt="Avatar" style="width: 100%;" />
+            <img src="Assets/project-screenshots/din-din-screenshot.png" alt="Avatar" style="width: 100%;" />
             <div class="container">
               <h4><b>Din-Din!</b></h4>
               <p>Collaborative Website Project</p>
@@ -54,7 +54,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="/Assets/project-screenshots/coding-quiz-screenshot.png" alt="Avatar" style="width: 100%;" />
+            <img src="Assets/project-screenshots/coding-quiz-screenshot.png" alt="Avatar" style="width: 100%;" />
             <div class="container">
               <h4><b>Code Quiz Game</b></h4>
               <p>Basketball Themed Quiz</p>
@@ -64,7 +64,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="/Assets/project-screenshots/med-mail-screenshot.png" alt="Avatar" style="width: 100%;" />
+            <img src="Assets/project-screenshots/med-mail-screenshot.png" alt="Avatar" style="width: 100%;" />
             <div class="container">
               <h4><b>Med Mail</b></h4>
               <p>Collaborative Website Project</p>
@@ -77,7 +77,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="/Assets/project-screenshots/team-profile-generator-screenshot.png" alt="Avatar" style="width: 100%;" />
+            <img src="Assets/project-screenshots/team-profile-generator-screenshot.png" alt="Avatar" style="width: 100%;" />
             <div class="container">
               <h4><b>Team Generator</b></h4>
               <p>CLI Application</p>
