add img btn link to portfolio page cards

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <div class="logo-container">
         <div class="logo-link">
           <a href="#about-me">
-            <img src="Assets/dl_dev_icon.png" alt="dl.dev-logo"></a>
+            <img src="Assets/dl_dev_icon.png" alt="dl.dev-logo"
+          /></a>
         </div>
       </div>
       <div class="navbar-container">
@@ -72,10 +73,16 @@
           </p>
           <div class="about-me-links">
             <a href="portfolio.html">
-              <img class="about-me-btn" src="Assets/buttons/portfolio-btn.png" alt="portfolio-btn"
+              <img
+                class="about-me-btn"
+                src="Assets/buttons/portfolio-btn.png"
+                alt="portfolio-btn"
             /></a>
             <a href="contact.html">
-              <img class="about-me-btn" src="Assets/buttons/contact-btn.png" alt="contact-btn"
+              <img
+                class="about-me-btn"
+                src="Assets/buttons/contact-btn.png"
+                alt="contact-btn"
             /></a>
           </div>
         </div>
