--- a/portfolio.html
+++ b/portfolio.html
@@ -46,6 +46,10 @@
             <div class="container">
               <h4><b>Din-Din!</b></h4>
               <p>Collaborative Website Project</p>
+              <div class="project-btn-container">
+                <a href="https://manorathn.github.io/group_5_project_1/"><img src="Assets/buttons/link_to_project.svg" height="35px" alt="link-to-project-btn"></a>
+                <a href="https://github.com/manorathn/group_5_project_1"><img src="Assets/buttons/link_to_code.svg" height="35px" alt="link-to-code-btn"></a>
+              </div>
               <ul>
                 <li>HTML / CSS / Js</li>
                 <li>Api.edamam</li>
@@ -58,6 +62,10 @@
             <div class="container">
               <h4><b>Code Quiz Game</b></h4>
               <p>Basketball Themed Quiz</p>
+              <div class="project-btn-container">
+                <a href="https://dlwhite112.github.io/Code-Quiz-Shootout-Game/"><img src="Assets/buttons/link_to_project.svg" height="35px" alt="link-to-project-btn"></a>
+                <a href="https://github.com/dlwhite112/Code-Quiz-Shootout-Game"><img src="Assets/buttons/link_to_code.svg" height="35px" alt="link-to-code-btn"></a>
+              </div>
               <ul>
                 <li>HTML / CSS / Js</li>
               </ul>
@@ -68,6 +76,10 @@
             <div class="container">
               <h4><b>Med Mail</b></h4>
               <p>Collaborative Website Project</p>
+              <div class="project-btn-container">
+                <a href="https://get-your-fix.herokuapp.com/"><img src="Assets/buttons/link_to_project.svg" height="35px" alt="link-to-project-btn"></a>
+                <a href="https://github.com/zivan2/project-2-team-8"><img src="Assets/buttons/link_to_code.svg" height="35px" alt="link-to-code-btn"></a>
+              </div>
               <ul>
                 <li>Express.js</li>
                   <li>MySQL / sequelize.js</li>
@@ -81,6 +93,10 @@
             <div class="container">
               <h4><b>Team Generator</b></h4>
               <p>CLI Application</p>
+              <div class="project-btn-container">
+                <a href="https://dlwhite112.github.io/The-Team-Profile-Generator/"><img src="Assets/buttons/link_to_project.svg" height="35px" alt="link-to-project-btn"></a>
+                <a href="https://github.com/dlwhite112/The-Team-Profile-Generator"><img src="Assets/buttons/link_to_code.svg" height="35px" alt="link-to-code-btn"></a>
+              </div>
               <ul>
                 <li>Node.js</li>
                 <li>Inquirer.js</li>
